fix layout issues for desktop, add tablet media queries up to 600px, and add 1x and 2x images for all devices

--- a/src/style.css
+++ b/src/style.css
@@ -114,8 +114,12 @@ body {
   z-index: 999;
 }
 
+.feature-item .feature-image {
+  position: relative;
+}
+
 #feature-background--first {
-  width: 100%;
+  width: 110%;
   height: 20rem;
   position: absolute;
   top: 45%;
@@ -132,7 +136,11 @@ body {
   box-shadow: 0 10px 70px rgba(0, 0, 0, 0.5);
 }
 
-#feature--second::before {
+#feature--second .feature-image {
+  overflow: visible;
+}
+
+#feature--second .feature-image::before {
   content: url(/pattern-lines.svg);
   position: absolute;
   top: 45%;
@@ -348,7 +356,7 @@ body {
 }
 
 .events-textbody {
-  padding: 2.5rem 5rem;
+  padding: 2.5rem 0rem 5rem 2.5rem;
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1.875rem;
@@ -493,8 +501,8 @@ footer {
 
 .footer-container {
   display: flex;
-  justify-content: space-between;
   align-items: flex-start;
+  gap: 7rem;
 }
 
 .footer-container p {
@@ -525,7 +533,7 @@ footer {
   }
 }
 
-@media (max-width: 1115px) {
+@media (max-width: 1150px) {
   .hero-section {
     margin-left: 5.15rem;
   }
@@ -572,7 +580,8 @@ footer {
   }
 }
 
-@media (max-width: 854px) {
+/* TODO: look into events section layout when other events are selected */
+@media (max-width: 1010px) {
   .feature-item {
     gap: 2.81rem;
   }
@@ -580,9 +589,68 @@ footer {
   .events-textbody {
     padding: 2.5rem 0;
   }
+
+  .events-selections label::before {
+    transform: scaleX(1.5) translateX(-95%);
+  }
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 880px) {
+  .feature-item {
+    gap: 2.81rem;
+  }
+
+  .events-textbody {
+    padding: 2.5rem 0;
+  }
+} */
+
+@media (max-width: 950px) {
+  .hero-section {
+    margin-left: 3rem;
+  }
+
+  .features-section {
+    margin: -4rem 3rem;
+  }
+  .feature-image {
+    flex: 1 0 27rem;
+  }
+
+  #feature--first::after {
+    left: -3rem;
+  }
+
+  #feature-background--second {
+    right: -3rem;
+  }
+
+  #feature--second .feature-image::before {
+    right: 10%;
+  }
+
+  .menuHighlights {
+    padding: 8rem 3rem 4rem 3rem;
+  }
+
+  .events {
+    margin: 4rem 3rem;
+  }
+
+  .events-image {
+    flex: 1 0 27rem;
+  }
+
+  .callToAction {
+    padding: 4rem 3rem;
+  }
+
+  footer {
+    padding: 4rem 3rem;
+  }
+}
+
+@media (max-width: 820px) {
   .header {
     height: 62rem;
     background: linear-gradient(
@@ -591,6 +659,7 @@ footer {
         rgba(92, 103, 121, 0.1) 62.5%
       ),
       no-repeat url("/images/hero-bg-tablet.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -628,6 +697,146 @@ footer {
     flex-direction: column;
     align-items: center;
   }
+
+  .features-section {
+    margin-bottom: 4rem;
+  }
+
+  #feature--first {
+    flex-direction: column;
+  }
+
+  #feature--second {
+    flex-direction: column-reverse;
+  }
+
+  #feature--second .feature-image::before {
+    top: 60%;
+    right: 7.5%;
+  }
+
+  #feature--second .feature-textbody {
+    align-self: center;
+  }
+
+  .feature-image {
+    max-height: 22.5rem;
+    max-width: 100%;
+    flex: 1 1 auto;
+  }
+
+  .feature-image--2 {
+    width: 100%;
+    height: 100%;
+    object-position: 100% 100%;
+  }
+
+  #feature-background--first {
+    left: -24.3rem;
+  }
+
+  #feature-background--second {
+    top: 65%;
+  }
+
+  /* TODO: fix image not properly fitting in container */
+  .image--zoomedIn {
+    width: 100%;
+    height: 100%;
+    transform: none;
+    object-position: 100% 100%;
+    box-shadow: 0 10px 70px rgba(0, 0, 0, 0.5);
+  }
+
+  .feature-textbody {
+    max-width: 28.5625rem;
+    text-align: center;
+  }
+
+  .feature-textbody h2 {
+    margin-inline: auto;
+  }
+
+  .menuHighlights {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+
+  .menuHighlights-textbody {
+    max-width: 27.8125rem;
+    padding-bottom: 0;
+    text-align: center;
+  }
+
+  .events-textbody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .events {
+    flex-direction: column;
+  }
+
+  .event-description {
+    max-width: 28.5625rem;
+    text-align: center;
+  }
+
+  .events-selections {
+    width: 105%;
+    margin-bottom: 4rem;
+    flex-direction: row;
+    justify-content: space-between;
+    order: -1;
+  }
+
+  .events-selections label {
+    padding-bottom: 0.7rem;
+  }
+
+  .events-selections label::before {
+    /* TODO get rid of mouse events */
+    content: "";
+    width: 25%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #9e7f66;
+    opacity: 0;
+  }
+
+  .events-selections .events-selection--active label,
+  .events-selections .events-selection--active label::before {
+    opacity: 100%;
+  }
+
+  .callToAction {
+    padding-inline: 0;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+  }
+
+  footer {
+    padding: 4rem 2rem;
+  }
+
+  .footer-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  /* TODO: media query for events selections @600px */
+
+  /* .callToAction h2 {
+    max-width: 38.4375rem;
+  } */
 }
 
 /* TODO: adjust background shape sizes to be smaller on smaller screens */
